--- a/rootdir/etc/init.mt6833.rc
+++ b/rootdir/etc/init.mt6833.rc
@@ -252,6 +252,11 @@ on post-fs-data
     chmod 0771 /mnt/vendor/nvdata
     mkdir /mnt/vendor/nvdata/media 0771 media audio
 
+    # create audio_param folder
+    mkdir /data/vendor/audiohal/audio_param
+    chown root system /data/vendor/audiohal/audio_param
+    chmod 0771 /data/vendor/audiohal/audio_param
+
     #Create cct mount point
     mkdir /mnt/vendor/cct
     chown root system /mnt/vendor/cct
