--- a/rootdir/etc/init.mt6833.rc
+++ b/rootdir/etc/init.mt6833.rc
@@ -253,9 +253,10 @@ on post-fs-data
     mkdir /mnt/vendor/nvdata/media 0771 media audio
 
     # create audio_param folder
-    mkdir /data/vendor/audiohal/audio_param
-    chown root system /data/vendor/audiohal/audio_param
-    chmod 0771 /data/vendor/audiohal/audio_param
+    mkdir /data/vendor/audiohal
+    chown root system /data/vendor/audiohal
+    chmod 0771 /data/vendor/audiohal
+    mkdir /data/vendor/audiohal/audio_param 0771 media audio
 
     #Create cct mount point
     mkdir /mnt/vendor/cct
