--- a/rootdir/etc/init.mt6833.rc
+++ b/rootdir/etc/init.mt6833.rc
@@ -53,6 +53,14 @@ on init
     write /dev/cpuset/system-background/cpus 0-5
     write /dev/cpuset/top-app/cpus 0-7
 
+# nfc
+service nfc_hal_service /vendor/bin/hw/android.hardware.nfc@1.2-service.st
+    override
+    class hal
+    user nfc
+    group nfc
+    disabled
+
 on late-init
     write /proc/bootprof "INIT:late-init"
 # enable rcu_expedited
@@ -210,6 +218,14 @@ on post-fs
     # allow ccci_mdinit access ccci_dump
     chown root system /proc/ccci_dump
 
+# Start the NFC HAL service if sku has nfc
+on property:ro.boot.product.hardware.sku=nfc
+    start nfc_hal_service
+
+# Stop the NFC HAL service if sku does not have nfc
+on property:ro.boot.product.hardware.sku=""
+    stop nfc_hal_service
+
 on property:ro.factory_mode=1 && property:sys.boot_completed=1
     chown system system /data/local/tmp
     chmod 0777 /data/local/tmp
@@ -268,6 +284,9 @@ on post-fs-data
     chown system system /mnt/vendor/persist
     chmod 0771 /mnt/vendor/persist
     restorecon_recursive /mnt/vendor/persist
+
+    #Create nfc
+    mkdir /data/vendor/nfc_socket 0770 nfc nfc
 
     #Create flash folder
     mkdir /data/vendor/flash
