--- a/rootdir/etc/init.mt6833.rc
+++ b/rootdir/etc/init.mt6833.rc
@@ -882,6 +882,15 @@ on boot
     chmod 0770 /sys/power/tuxonice
     chmod 0220 /sys/power/tuxonice/do_hibernate
 
+# Fingerprint
+    chown system system /sys/bus/spi/devices/spi5.0/clk_enable
+    chown system system /sys/bus/spi/devices/spi5.0/wakeup_enable
+    chown system system /sys/bus/spi/devices/spi5.0/fingerdown_wait
+    chown system system /sys/bus/spi/devices/spi5.0/irq
+    chmod 0200 /sys/bus/spi/devices/spi5.0/clk_enable
+    chmod 0200 /sys/bus/spi/devices/spi5.0/wakeup_enable
+    chmod 0600 /sys/bus/spi/devices/spi5.0/irq
+    chmod 0200 /sys/bus/spi/devices/spi5.0/fingerdown_wait
 
 # Smartbook Handler Framework
     chown system system /sys/power/sb_state
